; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_l3g4200d.c_w8u.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_l3g4200d.c_w8u.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@i2c_id = common dso_local global i32 0, align 4
@i2c_addr = common dso_local global i32 0, align 4
@PLATFORM_I2C_DIRECTION_TRANSMITTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32)* @w8u to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @w8u(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @i2c_id, align 4
  %8 = call i32 @platform_i2c_send_start(i32 %7)
  %9 = load i32, i32* @i2c_id, align 4
  %10 = load i32, i32* @i2c_addr, align 4
  %11 = load i32, i32* @PLATFORM_I2C_DIRECTION_TRANSMITTER, align 4
  %12 = call i32 @platform_i2c_send_address(i32 %9, i32 %10, i32 %11)
  %13 = load i32, i32* @i2c_id, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @platform_i2c_send_byte(i32 %13, i32 %14)
  %16 = load i32, i32* @i2c_id, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @platform_i2c_send_byte(i32 %16, i32 %17)
  %19 = load i32, i32* @i2c_id, align 4
  %20 = call i32 @platform_i2c_send_stop(i32 %19)
  ret void
}

declare dso_local i32 @platform_i2c_send_start(i32) #1

declare dso_local i32 @platform_i2c_send_address(i32, i32, i32) #1

declare dso_local i32 @platform_i2c_send_byte(i32, i32) #1

declare dso_local i32 @platform_i2c_send_stop(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
